--- a/package.json
+++ b/package.json
@@ -1,14 +1,60 @@
 {
   "name": "youtube-music",
+  "app-copyright": "Xavi Fortes",
   "version": "0.0.0",
+  "description": "App made for Windows, Linux and MacOS. For use YoutubeMusic as a Desktop Application",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "start:electron": "ng build --base-href ./ && electron .",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/XaviFortes/YoutubeMusic.git"
+  },
+  "keywords": [
+    "Youtube",
+    "Music"
+  ],
+  "author": "Xavi Fortes",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/XaviFortes/YoutubeMusic/issues"
+  },
+  "build": {
+    "appId": "com.YoutubeMusic.XaviFortes",
+    "productName": "Youtube Music",
+    "copyright": "Copyright © 2019 Xavi Fortes",
+    "electronVersion": "5.0.7",
+    "dmg": {
+      "contents": [
+        {
+          "x": 110,
+          "y": 150
+        },
+        {
+          "x": 240,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ]
+    }
+  },
+  "homepage": "https://github.com/XaviFortes/YoutubeMusic#readme",
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.0",
@@ -28,10 +74,12 @@
     "@angular/cli": "~8.2.0",
     "@angular/compiler-cli": "~8.2.0",
     "@angular/language-service": "~8.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "electron": "^6.0.11",
+    "electron-builder": "^21.2.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
